[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake"
version = "1.1"
description = "Snake, but in the cmd"
authors = [{name = "OrAxelerator"}]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "platformdirs",
    "windows-curses; platform_system == 'Windows'"
]
keywords = ["game", "snake"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
snake = "app:run"

[tool.setuptools]
include-package-data = true
py-modules = ["app", "snake", "apple", "homescreen"]

[project.urls]
Homepage = "https://github.com/OrAxelerator/pixel-snake-tui"
Repository = "https://github.com/OrAxelerator/pixel-snake-tui"
Issues = "https://github.com/OrAxelerator/pixel-snake-tui/issues"
